[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/default_theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/gui/default_theme/LineEdit.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/title_screen/button_focus.ogg" type="AudioStream" id=3]

[node name="LineEdit" type="LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1246.0
margin_bottom = -712.0
theme = ExtResource( 1 )
caret_blink = true
script = ExtResource( 2 )

[node name="LineEditFocus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="." to="." method="_on_LineEdit_text_changed"]
